# FastAPI-template

./: .env.example  AGENTS.md  README.md  pyproject.toml  serve.py
app/: main.py
app/api/: deps.py
app/api/routes/: post.py  posts.py  users.py
app/core/: config.py  db.py  deps.py
app/models/: base_model.py  post.py
app/utils/: logging.py
tests/: conftest.py
tests/api/routes/: test_post.py
tests/utils/: __init__.py  auth.py  factories.py
